--- a/history_html/history.html
+++ b/history_html/history.html
@@ -34,6 +34,21 @@
 </ul>
 </body>
 
+<div class="slider">
+  <input type="radio" name="slide" id="slide1" checked>
+  <input type="radio" name="slide" id="slide2">
+  <input type="radio" name="slide" id="slide3">
+  <ul id="imgholder" class="imgs">
+      <li><img src="./img/car.jpeg"></li>
+      <li><img src="./img/voice.jpeg"></li>
+      <li><img src="./img/golf.jpeg"></li>
+  </ul>
+  <div class="bullets">
+      <label for="slide1">&nbsp;</label>
+      <label for="slide2">&nbsp;</label>
+      <label for="slide3">&nbsp;</label>
+  </div>
+</div>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -51,8 +66,8 @@
 <body>
 <div class="history">
    <div>
-    <div class="shake">
-     <shake><h2>2023</h2></shake>
+      <div class="shake">
+     <h2><shake>2023</shake></h2>
     </div>
      <ol>
        <li>coming soon..</li>
@@ -61,7 +76,9 @@
    </div>
 
    <div>
-     <h2>2022</h2>
+    <div class="shake">
+     <h2><shake>2022</shake></h2>
+    </div>
      <ol>
        <li>2022.12. MATLAB AI CHALLENGE 대상 수상</li>
        <li>2022.03. GOLF BALL project 시작</li>
@@ -69,7 +86,11 @@
    </div>
 
    <div>
+    <div class="shake">
+      <shake>
      <h2>2021</h2>
+     </shake>
+    </div>
      <ol>
        <li>2021.10. 산림수종 빅데이터 아이디어 경진대회 은상 수상</li>
        <li>2021.03. EDDY 개발</li>
@@ -77,17 +98,26 @@
    </div>
 
    <div>
-    <h2>2020</h2>
+    <div class="shake">
+    <h2><shake>2020</shake></h2>
+    </div>
     <ol>
       <li>2020.03. ADAS 프로젝트 마무리</li>
     </ol>
   </div>
 
   <div>
-    <h2>2019</h2>
+    <div class="shake">
+    <h2><shake>2019</shake></h2>
+    </div>
     <ol>
       <li>2019.03. ADAS 프로젝트 </li>
     </ol>
   </div>
 
 </div>
+
+<footer>
+  <p>Copyright © 2018 t[az =]pschool.co.,Ltd. All rights reserved.</p>
+  <address>Contact webmaster for more information. 070-1234-5678</address>
+</footer>
