--- a/main/main.html
+++ b/main/main.html
@@ -1,8 +1,8 @@
 <head>
     <link rel="stylesheet" href="./main.css"/>
     <!--<script type="module" src="C:\Users\rlaal\Desktop\iNES Webpage\main/particles.js"></script>-->
-    <script src="C:\Users\rlaal\Desktop\iNES Webpage\main\particles.js\src\particles.js"></script>
-    <script src="C:\Users\rlaal\Desktop\iNES Webpage\main\main.js"></script>
+    <script src="./particles.js\src\particles.js"></script>
+    <script src="./main.js"></script>
 </head>
 <body>
     <section class="nav">
